Added radius to let

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     text-align: center;
     font-family: Arial, sans-serif;
-    background-color: black;
+    background-color: rgb(222, 10, 241);
 }
 canvas {
     background: #eee;
