Added radius to let

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     background-color: rgb(222, 10, 241);
 }
 canvas {
-    background: #b6abab;
+    background: #f3ecec09;
     display: block;
     margin: 20px auto;
 }
