--- a/style.css
+++ b/style.css
@@ -12,9 +12,10 @@ body {
   }
   
 canvas {
-    background: white;
+    background-color: antiquewhite;
     display: block;
     margin: 20px auto;
+    border-radius: 10%;
 }
 #scoreboard {
     font-size: 20px;
